--- a/PlanetWallet/Resources/Info.plist
+++ b/PlanetWallet/Resources/Info.plist
@@ -34,7 +34,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>1_Splash</string>
+	<string>4_Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
