[Transfer] complete Amount popup

--- a/PlanetWallet/Resources/Info.plist
+++ b/PlanetWallet/Resources/Info.plist
@@ -20,6 +20,23 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>test.planetwallet.io</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>QR Code를 인식하기 위해 카메라 권한이 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>WorkSans-Bold.tff</string>
@@ -32,7 +49,7 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>1_Splash</string>
 	<key>UIMainStoryboardFile</key>
 	<string>1_Splash</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -52,22 +69,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>test.planetwallet.io</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-				<key>NSIncludesSubdomains</key>
-				<true/>
-			</dict>
-		</dict>
-	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>QR Code를 인식하기 위해 카메라 권한이 필요합니다.</string>
 </dict>
 </plist>
