--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+
+Pods/
+
  
 ## Build generated
 build/
